--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -56,3 +56,22 @@ body {
 	font-weight: 600;
 	letter-spacing: -0.3px;
 }
+
+.field_with_errors {
+  color: #ff3333;
+  background-color: #FFEEEE;
+  border-radius: 3px;
+  padding:8px;
+}
+
+#map {
+    height: 300px;
+  }
+
+
+
+
+
+
+
+
