--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -8,9 +8,18 @@
 		  <small><%= place.user.email %></small>
 		<% end %>
 	</div>
-
-<% end %>
-
+	<% if place.comments.present? %>
+  <div class="col-xs-12">
+    <blockquote>
+      <% if place.comments.last.humanized_rating.present? %>
+        <b><%= place.comments.last.humanized_rating %></b> - 
+      <% end %>
+      <%= place.comments.last.message %>
+      <small><%= place.comments.last.user.email %></small>
+    </blockquote>
+  </div>
+ <% end %>
+ <% end %>
 <div class="apple_pagination">
 	<%= will_paginate @places %>
 </div>
