--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -46,6 +46,9 @@ function initMap() {
 	  	<% if current_user && current_user == @place.user %>
 	  	  <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
 	      <%= link_to 'Destroy', place_path(@place), method: :delete,data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
+        <button class="btn btn-primary" data-toggle="modal" data-target="#myModal1">
+  Upload Picture
+</button>
 	    <% end %>
 	  </div>
 </div>
@@ -96,6 +99,44 @@ function initMap() {
     </blockquote>
   </div>
 <% end %>
+
+
+
+
+<% @place.photos.each do |photo| %>
+  <div class="col-xs-6 col-sm-6">
+    <blockquote>
+      <b><%= image_tag photo.picture , class: 'img-responsive picsize' %></b>
+      <small><%= photo.caption %></small>
+    </blockquote>
+  </div>
+<% end %>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel1">Add a picture</h4>
+      </div>
+      <div class="modal-body">
+        <%= simple_form_for @photo ,url: place_photos_path(@place) do |f| %>
+        <%= f.input :picture %> 
+        <%= f.input :caption %>  
+      </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <%= f.submit 'Upload', class: 'btn btn-primary' %>
+        </div>
+        <% end %>
+    </div>
+  </div>
+</div>
+
+
+
+
 
 
 
